Tue Sep 22 12:45:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, daemon/verify-pam.c: Modification to logindevperm
	  logic so that device permissions are given to the gdm user
	  while gdm is running.  This allows a11y programs like
	  gnopernicus to access the sound device for text-to-speech.
	  Minor correction to the logindevperm logout logic in 
	  verify-pam.c so that di_devperm_logout isn't called in
	  situations where di_devperm_login was not called.

Tue Sep 15 12:45:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* configure.in: Corrected check for Solaris auditing API so it
	  will not set HAVE_ADT when building on Solaris 9 and earlier.
	  The auditing API supported in gdm2 is only supported on the
	  next release of Solaris.

Tue Sep 14 15:29:22 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.5

2004-08-27  Akagic Amila  <bono@linux.org.ba>

        * configure.in: Added 'bs' to ALL_LINGUAS.

Thu Aug 26 15:55:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Updated docs to include gdmflexiserver command
	  options, arguments for all GDM programs aside from gdm-binary
	  (which was already there), added accessibility section, and
	  cleaned up the XML so it is more readible.  Also added a 
	  comment that gdmlogin now lets you change the theme from the
	  menu.

Tue Aug 24 12:27:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* verify-pam.c: No longer call logindevperm if not logging into
	  the console.  This corrects problems discovered by testing
	  on Solaris.

Wed Aug 18 13:12:29 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.4

Wed Aug 18 13:00:09 2004  George Lebl <jirka@5z.com>

	* daemon/slave.c: create .dmrc non group/world readable, though that's
	  probably just being overly anal.

Wed Aug 18 12:28:52 2004  George Lebl <jirka@5z.com>

	* gui/gdmsetup.c: Fix #143707 by using Exclude= as well for
	  the dropdown lists.

Wed Aug 18 12:15:39 2004  George Lebl <jirka@5z.com>
