@@ -1,3 +1,9 @@
+Wed Sep 29 17:15:00 2004  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/gdm.c, daemon/verify-pam.c: Cleaned up code and moved
+	  final di_devperm_logout call in gdm.c so it properly resets
+	  permissions to root when gdm-stop is run.
+
 Tue Sep 22 12:45:00 2004  Brian Cameron  <brian.cameron@sun.com>
 
 	* daemon/gdm.c, daemon/verify-pam.c: Modification to logindevperm
